# software-update-guardian

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
dist_wheel_check/: software_update_guardian-0.1.0-py3-none-any.whl
src/update_guardian/: __init__.py  config.py  main.py
src/update_guardian/core/: __init__.py  classifier.py  models.py  storage.py
src/update_guardian/ui/: __init__.py  app.py
src/update_guardian/ui/pages/: __init__.py  dashboard.py  history.py  upload.py
src/update_guardian/ui/utils/: __init__.py  caching.py  onboarding.py  session.py  theme.py
tests/: conftest.py  test_classifier.py  test_models.py  test_storage.py
