[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "software-update-guardian"
version = "0.1.0"
description = "Explainable, rule-traceable triage for remote software updates—Streamlit UI, deterministic classifier, SQLModel/SQLite—for Regulatory Ops, Quality Systems, and digital clinical platforms."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Ela Halilovic" }]
maintainers = [{ name = "Ela Halilovic" }]
keywords = [
    "clinical-operations",
    "clinical-systems",
    "CRO",
    "decision-support",
    "digital-transformation",
    "EU-MDR",
    "FDA",
    "GAMP",
    "GxP",
    "IEC-62304",
    "medical-device",
    "quality-assurance",
    "quality-systems",
    "regulatory-affairs",
    "regulatory-compliance",
    "regulatory-operations",
    "risk-classification",
    "software-update",
    "sqlmodel",
    "sqlite",
    "streamlit",
    "traceability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.2,<3",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlmodel>=0.0.22,<0.1",
    "streamlit>=1.40,<2",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14,<2",
    "pandas-stubs>=2.2,<3",
    "ruff>=0.9,<1",
    "pytest>=8.3,<9",
    "pytest-cov>=6.0,<7",
    "types-fpdf2>=2.8,<3",
    "types-python-dateutil>=2.9,<3",
]

[project.scripts]
update-guardian = "update_guardian.main:launch_ui"

[project.urls]
Homepage = "https://github.com/BouncyMolecules/software-update-guardian"
Repository = "https://github.com/BouncyMolecules/software-update-guardian"
Issues = "https://github.com/BouncyMolecules/software-update-guardian/issues"
Changelog = "https://github.com/BouncyMolecules/software-update-guardian/releases"
Documentation = "https://github.com/BouncyMolecules/software-update-guardian#readme"
Author = "https://www.linkedin.com/in/ela-halilovic"
LinkedIn = "https://www.linkedin.com/in/ela-halilovic"
ClinicalFuture = "https://clinicalfuture.substack.com"
GitHubProfile = "https://github.com/BouncyMolecules"

[tool.hatch.build.targets.wheel]
packages = ["src/update_guardian"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "TCH",
    "PTH",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["update_guardian"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
show_error_codes = true
mypy_path = ["src"]
packages = ["update_guardian"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["streamlit.*", "sqlmodel.*", "sqlalchemy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["error::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["update_guardian"]
# Streamlit shell and pages are validated manually / in demos; CI gates measure tested domain layer.
omit = [
    "*/update_guardian/main.py",
    "*/update_guardian/ui/*",
]

[tool.coverage.report]
# Threshold applies after `omit` above (~550 LOC: models, classifier, storage, config).
# Branch-aware combined coverage for measured modules (~80% today); avoids lying vs whole-package incl. UI.
fail_under = 78
show_missing = true
