[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "software-update-guardian"
version = "0.1.0"
description = "Structured, explainable triage for remote software updates: deterministic rules engine with stable identifiers, persistence (SQLModel/SQLite), and a Streamlit UI—built as a Regulatory Operations / Quality Systems portfolio-quality reference."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Ela Halilovic" }]
maintainers = [{ name = "Ela Halilovic" }]
keywords = [
    "annex-11",
    "audit-trail",
    "change-control",
    "clinical-operations",
    "clinical-systems",
    "computerized-system-validation",
    "clinical-trial-technology",
    "CRO",
    "CSV",
    "decision-support",
    "digital-clinical-platforms",
    "digital-transformation",
    "EU-CTR",
    "EU-MDR",
    "FDA",
    "GAMP",
    "GxP",
    "IEC-62304",
    "medical-device",
    "part-11",
    "quality-assurance",
    "quality-systems",
    "regulatory-affairs",
    "regulatory-compliance",
    "regulatory-operations",
    "risk-band",
    "risk-classification",
    "risk-management",
    "software-change",
    "software-life-cycle",
    "software-update",
    "SQLAlchemy",
    "sqlmodel",
    "sqlite",
    "streamlit",
    "traceability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.2,<3",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlmodel>=0.0.22,<0.1",
    "streamlit>=1.40,<2",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14,<2",
    "pandas-stubs>=2.2,<3",
    "ruff>=0.9,<1",
    "pytest>=8.3,<9",
    "pytest-cov>=6.0,<7",
    "types-python-dateutil>=2.9,<3",
]

[project.scripts]
update-guardian = "update_guardian.main:launch_ui"

[project.urls]
Homepage = "https://github.com/BouncyMolecules/software-update-guardian"
Repository = "https://github.com/BouncyMolecules/software-update-guardian"
Issues = "https://github.com/BouncyMolecules/software-update-guardian/issues"
Changelog = "https://github.com/BouncyMolecules/software-update-guardian/releases"
Documentation = "https://github.com/BouncyMolecules/software-update-guardian#readme"
LinkedIn = "https://www.linkedin.com/in/ela-halilovic"
ClinicalFuture = "https://clinicalfuture.substack.com"
GitHubProfile = "https://github.com/BouncyMolecules"

[tool.hatch.build.targets.wheel]
packages = ["src/update_guardian"]

[tool.hatch.build.targets.wheel.force-include]
"src/update_guardian/py.typed" = "update_guardian/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "TCH",
    "PTH",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["update_guardian"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
show_error_codes = true
mypy_path = ["src"]
packages = ["update_guardian"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["streamlit.*", "sqlmodel.*", "sqlalchemy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
filterwarnings = ["error::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["update_guardian"]
# Streamlit shell and pages are validated manually / in demos; CI gates measure tested domain layer.
omit = [
    "*/update_guardian/main.py",
    "*/update_guardian/ui/*",
]

[tool.coverage.report]
# Threshold applies after `omit` above. The percentage is coverage.py's combined metric (lines +
# branches) on non-omitted sources only — Streamlit entrypoints and `ui/*` stay out of scope so the
# gate reflects the tested domain layer (`core/`, `config.py`). Set ~5 points below observed CI
# headroom so incidental branch growth does not flake; re-baseline when adding large untested blocks.
fail_under = 80
show_missing = true
